# a-team-build-2-final

./: .env.example  .gitignore  README.md  documents_summary.txt  pyproject.toml  requirements.txt
data/downloaded_files/: AVERAGE EXPENDITURES FOR AUTO INSURANCE, UNITED STATES, 1998-2007.xls  AVERAGE EXPENDITURES FOR AUTO INSURANCE, UNITED STATES, 1999-2008.xls  AVERAGE EXPENDITURES FOR AUTO INSURANCE, UNITED STATES, 2000-2009.xls  AVERAGE EXPENDITURES FOR AUTO INSURANCE, UNITED STATES, 2001-2010.xls  AVERAGE EXPENDITURES FOR AUTO INSURANCE, UNITED STATES, 2002-2011.xls  AVERAGE EXPENDITURES FOR AUTO INSURANCE, UNITED STATES, 2003-2012.xls  Average Expenditures For Auto Insurance, 2004-2013.xls  Average Expenditures For Auto Insurance, 2005-2014.xls  Average Expenditures For Auto Insurance, 2006-2015.xls  Average Expenditures For Auto Insurance, 2007-2016.xls  Average Expenditures For Auto Insurance, 2008-2017.xls  Average Expenditures For Auto Insurance, 2009-2018.xls  Average Expenditures For Auto Insurance, 2010-2019.xls  Average Expenditures For Auto Insurance, 2011-2020.xls  Average Expenditures for Auto Insurance, 2012-2021.xls  CONSUMER PRICE INDICES FOR INSURANCE AND RELATED ITEMS AND ANNUAL RATES OF CHANGE, 2000-2009 (Cont&#039  CONSUMER PRICE INDICES FOR INSURANCE AND RELATED ITEMS AND ANNUAL RATES OF CHANGE, 2000-2009.xls  CONSUMER PRICE INDICES FOR INSURANCE AND RELATED ITEMS AND ANNUAL RATES OF CHANGE, 2001-2010 (Cont&#039  (+118 more)
data/storage/: .gitignore
resources/: chat.webm  file-upload.webm
src/: app.py  index.py  state_schemas.py
src/agents/: analyst.py  (+4 more)
(+5 files in other folders)
